examples/test/testpolicy12554.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12554
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key20: value1
      key24: value33
      key9: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value42
          key40: value41
          key47: value22
      podSelector:
        matchLabels:
          key49: value43
          key40: value12
          key48: value28
